--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Stephanie La Rosa</span>
           <br />
-          I'm the Unknown Developer.
+          I'm an Aspiring Software Engineer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -63,7 +63,7 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper">
+        <div class="row about-wrapper"> I am a Computer Science Major and Mathematics Minor at Florida State University <br />
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
               <img
