--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper"> I am a Computer Science Major and Mathematics Minor at Florida State University <br />
+        <div class="row about-wrapper"> I am Computer Science Major and Mathematics Minor at Florida State University <br />
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
               <img
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile.jpeg"
                 alt="Profile Image"
               />
             </div>
@@ -79,11 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I am to one day create something that will be useful to future societies.
               </p>
               <span class="d-flex mt-3">
                 <a
