--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Stephanie La Rosa | Student</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Stephanie La Rosa | Student" />
 
     <link
       rel="stylesheet"
@@ -64,7 +64,7 @@
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper"> 
-          I am Computer Science Major and Mathematics Minor at Florida State University <br />
+          I am Computer Science Major and Mathematics Minor at Florida State University 
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
               <img
