--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                 I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
-                I am to one day create something that will be useful to future societies.
+                I aim for one day to create something that will be useful to future generations.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -279,7 +279,7 @@
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:sl21k@fsu.edu"
             >Call to Action</a
           >
         </div>
@@ -307,39 +307,7 @@
 
         <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer" 
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
-      </div>
-    </footer>
+       
     <!-- /END Footer Section -->
 
     <script defer type="module" src="index.js"></script>
