--- a/src/index.html
+++ b/src/index.html
@@ -64,11 +64,21 @@
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper"> 
+          .about-wrapper__info-text {
+  font-size: 20px;
+}
           I am Computer Science Major 
           and Mathematics Minor at 
           Florida State University 
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
+              .about-wrapper__image {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100%;
+}
+
               <img
                 alt="Profile Image"
                 class="img-fluid rounded shadow-lg"
