--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,7 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper"> 
-  I am Computer Science Major 
-          and Mathematics Minor at 
-          Florida State University 
+        <div class="row about-wrapper">  
           <div class="col-md-10 col-sm-16">
 
               <img
@@ -82,6 +79,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
+                I am Computer Science Major and Mathematics Minor at Florida State University 
                 I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
