--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,10 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
+        <p I am Computer Science Major and Mathematics Minor at Florida State University 
+        </p>
         <div class="row about-wrapper">  
-          <div class="col-md-10 col-sm-16">
+          <div class="col-md-6 col-sm-12">
 
               <img
                 alt="Profile Image"
@@ -79,7 +81,6 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am Computer Science Major and Mathematics Minor at Florida State University 
                 I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
