--- a/src/index.html
+++ b/src/index.html
@@ -43,20 +43,24 @@
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
-    <section id="hero" class="jumbotron">
-      <div class="container">
-        <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Stephanie La Rosa</span>
-          <br />
-          I'm an Aspiring Software Engineer.
-        </h1>
-        <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
-          >
-        </p>
-      </div>
-    </section>
+    <section id="hero">
+  <div class="hero-wrapper container">
+    <div>
+      <h1 class="hero-title load-hidden">
+        Hi, my name is <span class="text-color-main">Stephanie La Rosa</span>
+      </h1>
+      <p class="hero-cta load-hidden">
+        <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">
+          About Me
+        </a>
+      </p>
+    </div>
+    <div class="hero-image">
+      <img src="./assets/profile.jpeg" alt="Profile Image" />
+    </div>
+  </div>
+</section>
+
     <!-- /END Hero Section -->
 
     <!-- **** About Section **** -->
