--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
               <img
                 alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
+                class="img-fluid rounded shadow-lg text-center"
                 height="auto"
                 width="300px"
                 src="assets/profile.jpeg"
