--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,16 @@
     <!-- /END Hero Section -->
 
 
-    <!-- **** About Section **** -->
+   <!-- **** About Section **** -->
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
-        <p I am Computer Science Major and Mathematics Minor at Florida State University 
-        </p>
-        <div class="row about-wrapper">  
+        <div class="row about-wrapper"> I am Computer Science Major and Mathematics Minor at Florida State University <br />
           <div class="col-md-6 col-sm-12">
-
+            <div class="about-wrapper__image load-hidden">
               <img
                 alt="Profile Image"
-                class="img-fluid rounded shadow-lg text-center"
+                class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
                 src="assets/profile.jpeg"
@@ -85,7 +83,7 @@
                 I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
-                I aim for one day to create something that will be useful to future generations.
+                I am to one day create something that will be useful to future societies.
               </p>
               <span class="d-flex mt-3">
                 <a
