--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,8 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper"> I am Computer Science Major and Mathematics Minor at Florida State University <br />
+        <div class="row about-wrapper"> 
+          <p I am Computer Science Major and Mathematics Minor at Florida State University <p/>
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
               <img
