--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
+                I am Computer Science Major and Mathematics Minor at Florida State University
                 I enjoy traveling, painting, and sometimes doing nothing.
               </p>
               <p class="about-wrapper__info-text">
