--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper"> 
-          <p I am Computer Science Major and Mathematics Minor at Florida State University <p/>
+          I am Computer Science Major and Mathematics Minor at Florida State University
           <div class="col-md-10 col-sm-16">
             <div class="about-wrapper__image load-hidden">
               <img
@@ -81,8 +81,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am Computer Science Major and Mathematics Minor at Florida State University
-                I enjoy traveling, painting, and sometimes doing nothing.
+                I enjoy traveling, painting, and going to the beach to relax.
               </p>
               <p class="about-wrapper__info-text">
                 I am to one day create something that will be useful to future societies.
