--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I enjoy traveling, painting, and going to the beach to relax.
+                <br/> I enjoy traveling, painting, and going to the beach to relax.
               </p>
               <p class="about-wrapper__info-text">
                 I am to one day create something that will be useful to future societies.
