--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                 <br/> I enjoy traveling, painting, and going to the beach to relax.
               </p>
               <p class="about-wrapper__info-text">
-                I am to one day create something that will be useful to future societies.
+                I aim to one day create something that will be useful to future societies.
               </p>
               <span class="d-flex mt-3">
                 <a
