--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am Computer Science Major and Mathematics Minor at Florida State University <br/>
+                I am a Computer Science Major and Mathematics Minor at Florida State University <br/>
                 <br/> I enjoy traveling, painting, and going to the beach to relax.
               </p>
               <p class="about-wrapper__info-text">
